Set it up to work without systemd timers

--- a/src/etc/powerwatcher.conf
+++ b/src/etc/powerwatcher.conf
@@ -1,3 +1,16 @@
+# IP that will be pinged to check if there's a blackout
 IP=8.8.8.8
-INTERVAL_IN_SECONDS=5
+
+# Time to wait before starting the calls. This is to avoid the system 
+# from powering-off itself too quickly if the IP is not available for
+# whatever reason
+WAIT_BEFORE_START=30m
+
+# Time to wait between each execution loop
+WAIT_BETWEEN_EXECUTIONS=2m
+
+# Number of ping attempts per execution
 NUMBER_OF_ATTEMPTS=10
+
+# Time to wait between pings
+WAIT_BETWEEN_ATTEMPTS=5s
